added the ability to clear games

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -17,3 +17,7 @@
    ======================================================================== */
 @import "components/base.less";
 
+form {
+  padding-bottom:10px;
+}
+
